--- a/Views/Games/Details.cshtml
+++ b/Views/Games/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@* @model GameForum.Models.Game
+﻿ @model GameForum.Models.Game
 
 @{
     ViewData["Title"] = "Details";
@@ -35,10 +35,10 @@
             @Html.DisplayFor(model => model.AverageRating)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Category)
+            @Html.DisplayNameFor(model => model.GameCategories)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category)
+            @Html.DisplayFor(model => model.GameCategories)
         </dd>
     </dl>
 </div>
@@ -46,4 +46,3 @@
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
- *@
