Created review and discussion thread with replies

--- a/Views/Games/Details.cshtml
+++ b/Views/Games/Details.cshtml
@@ -66,9 +66,16 @@
                                     <div class="review-meta">
                                         <div class="review-author">
                                             <div class="review-author-avatar">
-                                                @(review.Author.UserName.Length > 0
+                                                @if (!string.IsNullOrEmpty(review.Author.ProfileImg))
+                                                {
+                                                    <img src="@review.Author.ProfileImg" alt="Profile Image" class="author-image"/>
+                                                }
+                                                else
+                                                {
+                                                    @(review.Author.UserName.Length > 0
                                                         ? review.Author.UserName[0].ToString().ToUpper()
                                                         : "U")
+                                                }
                                             </div>
                                             <span class="user-title">
                                                 <a asp-controller="User"
@@ -97,7 +104,7 @@
                                             <form method="post" action="#">
                                                 <button type="submit" class="vote-btn downvote"><i class="fas fa-thumbs-down"></i></button>
                                             </form>
-                                            <a asp-controller="Replies" asp-action="ForReview" asp-route-id="@review.Id" class="details-btn mx-5">
+                                            <a asp-controller="Reviews" asp-action="Details" asp-route-id="@review.Id" class="details-btn mx-5">
                                                 Open thread
                                             </a>
                                         </div>
@@ -122,7 +129,16 @@
                                     <div class="review-meta">
                                         <div class="review-author">
                                             <div class="review-author-avatar">
-                                                @(discussion.Author?.UserName?.FirstOrDefault().ToString().ToUpper() ?? "U")
+                                                @if (!string.IsNullOrEmpty(discussion.Author.ProfileImg))
+                                                {
+                                                    <img src="@discussion.Author.ProfileImg" alt="Profile Image" class="author-image" />
+                                                }
+                                                else
+                                                {
+                                                    @(discussion.Author.UserName.Length > 0
+                                                        ? discussion.Author.UserName[0].ToString().ToUpper()
+                                                        : "U")
+                                                }
                                             </div>
                                             <span class="user-title">
                                                 <a asp-controller="User"
@@ -148,7 +164,7 @@
                                             <form method="post" action="#">
                                                 <button type="submit" class="vote-btn downvote"><i class="fas fa-thumbs-down"></i></button>
                                             </form>
-                                            <a asp-controller="Replies" asp-action="ForDiscussion" asp-route-id="@discussion.Id" class="details-btn">
+                                            <a asp-controller="Discussions" asp-action="Details" asp-route-id="@discussion.Id" class="details-btn">
                                                 Open thread
                                             </a>
                                         </div>
