--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -91,7 +91,7 @@
                         <form method="post" action="#">
                             <button type="submit" class="vote-btn downvote"><i class="fas fa-thumbs-down"></i></button>
                         </form>
-                        <a asp-controller="Replies" asp-action="ForReview" asp-route-id="@review.Id" class="details-btn mx-5">
+                        <a asp-controller="Reviews" asp-action="Details" asp-route-id="@review.Id" class="details-btn mx-5">
                             Open thread
                         </a>
                     </div>
