--- a/wwwroot/css/game_details.css
+++ b/wwwroot/css/game_details.css
@@ -435,3 +435,13 @@
     gap: 1rem;
     margin-top: 1rem;
 }
+
+
+
+.author-image {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
